Fix content overflow 1

--- a/SCSS/Notion like No Bullet Editor Mode.scss
+++ b/SCSS/Notion like No Bullet Editor Mode.scss
@@ -340,6 +340,7 @@
 			position: relative;
 			background-color: transparent;
 			margin-left: 1.6rem;
+			width: calc(100% - 1.6rem);
 		}
 
 		// Sticky Top bar
